--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       <img src="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/ac/acab4a6b8fa88eb44569321355a1750fed412bb1_full.jpg"/>
                     </div>
                     <div class="text">
-                      <div class="user">ruukiZ</div>
+                      <div class="user">PersonX</div>
                       <div class="message">Hello. This is a test message. To show you the chat.</div>
                     </div>
                   </div>
